Revert "[NMMA-326] fix special offers items grid spacing"
This reverts commit 78b0ffb537afeabcfffac03f1036b8b16980fd6a.

--- a/docroot/themes/custom/boatshow/sass/components/_special-offer.scss
+++ b/docroot/themes/custom/boatshow/sass/components/_special-offer.scss
@@ -8,15 +8,15 @@
   }
 
   .views-row {
-    width: 100%;
+    flex-basis: 100%;
     margin-bottom: 10px;
 
     @include media-breakpoint-up(md) {
-      width: 50%;
+      flex-basis: 50%;
     }
 
     @include media-breakpoint-up(lg) {
-      width: 25%;
+      flex-basis: 25%;
     }
   }
 }
@@ -66,10 +66,6 @@
   .special-offer-title {
     @extend h4;
     text-transform: uppercase;
-  }
-
-  .special-offer-body {
-    word-break: break-word;
   }
 
   .special-offer-booth {
